Crop background images to prevent layout jumps. Some beatmap's cover images are not actually 800x280, so this crops them to the correct aspect ratio

--- a/src/play/style.scss
+++ b/src/play/style.scss
@@ -5,7 +5,7 @@
 
 html {
   font-size: min(2vw, 2vh);
-  font-family: "Exo 2",sans-serif;
+  font-family: "Exo 2", sans-serif;
 }
 
 body {
@@ -17,18 +17,21 @@ body {
   background-color: black;
 }
 
+$info-width: 40rem;
+
 .info {
   position: relative;
   margin: 2rem auto;
-  width: 40rem;
+  width: $info-width;
   min-height: 27.5rem;
   background-color: #4e4e4e;
   border-radius: 2rem;
   overflow: hidden;
 
   .banner {
-    width: 100%;
-    height: auto;
+    width: $info-width;
+    height: calc($info-width * 280 / 800);
+    object-fit: cover;
     mask-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 1) 50%,
